ecmascript/parser/tests/typescript-errors/tsc/es6/yieldExpressions/YieldStarExpression2_es6/input.ts.stderr
error: 'implements', 'interface', 'let', 'package', 'private', 'protected',  'public', 'static', or 'yield' cannot be used as an identifier in strict mode
 --> $DIR/tests/typescript-errors/tsc/es6/yieldExpressions/YieldStarExpression2_es6/input.ts:2:1
  |
2 | yield *;
  | ^^^^^

error: Expected an expression
 --> $DIR/tests/typescript-errors/tsc/es6/yieldExpressions/YieldStarExpression2_es6/input.ts:2:8
  |
2 | yield *;
  |        ^

